samples/_failures_safe/1761422318_ed33af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_642bf48a.c: In function ‘main’:
./samples/SAFE/__tmp_642bf48a.c:163:29: error: expected ‘]’ at end of input
  163 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_642bf48a.c:163:5: error: expected declaration or statement at end of input
  163 |     if (len > 0 && input[len
      |     ^~
